# cuttlefish

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md
firmware/: Cargo.toml  LICENSE  build.rs
firmware/src/: main.rs
firmware/src/usb/: mod.rs  picotool.rs
pcb/: LICENSE
pcb/main/: TPS6293x_calculator.ipynb  board_outline.FCStd  cuttlefish-main.kicad_pcb  cuttlefish-main.kicad_prl  cuttlefish-main.kicad_pro  cuttlefish-main.kicad_sch  feeder2040.kicad_pcb  feeder2040.kicad_prl  feeder2040.kicad_pro  feeder2040.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
pcb/main/Cuttlefish.pretty/: cuttlefish.kicad_mod
