[package]
name = "cuttlefish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
defmt = "0.3"
defmt-rtt = "0.4"
embassy-executor = { version = "0.3.1", path = "../third_party/embassy-rs/embassy-executor", features = [
    "nightly",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-futures = { version = "0.1.0", path = "../third_party/embassy-rs/embassy-futures" }
embassy-rp = { version = "0.1.0", path = "../third_party/embassy-rs/embassy-rp", features = [
    "defmt",
    "unstable-traits",
    "nightly",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
] }
embassy-time = { version = "0.1.5", path = "../third_party/embassy-rs/embassy-time", features = [
    "nightly",
    "unstable-traits",
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-usb = { version = "0.1.0", path = "../third_party/embassy-rs/embassy-usb", features = [
    "defmt",
] }
# Pin heapless crate to avoid version conflicts on byteorder crate.
heapless = "0.7.15"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[profile.release]
debug = 2
